2010-08-14  Jan Nijtmans  <nijtmans@users.sf.net>

	* compat/unicows  Remove completely, see Feature Req #2819611

2010-08-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/ldAix: remove ancient (pre-4.2) AIX support
	* unix/configure: regen with ac-2.59
	* unix/configure.in, unix/tclConfig.sh.in, unix/Makefile.in:
	* unix/tcl.m4 (AIX): remove the need for ldAIX, replace with
	-bexpall/-brtl.  Remove TCL_EXP_FILE (export file) and other
	baggage that went with it.  Remove pre-4 AIX build support.

2010-08-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c (TclNRYieldToObjCmd): 
	* tests/coroutine.test: fixed bad copypasta snafu. 
	Thanks to Andy Goth for finding the bug.

2010-08-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclUtil.c (TclByteArrayMatch): patterns may not be
	null-terminated, so account for that.

2010-08-09  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6b2 release.

2010-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in, win/makefile.bc, win/makefile.vc, win/tcl.dsp:
	* win/tclWinPipe.c (TclpCreateProcess):
	* win/stub16.c (removed): removed Win9x tclpip8x.dll build and
	16-bit application loader stub support.  Win9x is no longer
	supported.

	* win/tclWin32Dll.c (TclWinInit): hard-enforce Windows 9x as an
	unsupported platform with a panic.  Code to support it still
	exists in other files (to go away in time), but new APIs are being
	used that don't exist on Win9x.

	* unix/tclUnixFCmd.c: adjust license header as per
	ftp://ftp.cs.berkeley.edu/pub/4bsd/README.Impt.License.Change

	* license.terms: fix DFARs note for number-adjusted rights clause

	* win/tclWin32Dll.c (asciiProcs, unicodeProcs):
	* win/tclWinLoad.c (TclpDlopen): 'load' use LoadLibraryEx with
	* win/tclWinInt.h (TclWinProcs): LOAD_WITH_ALTERED_SEARCH_PATH to
	prefer dependent DLLs in same dir as loaded DLL.

	* win/Makefile.in (%.${OBJEXT}): better implicit rules support

2010-08-04  Andreas Kupries  <andreask@activestate.com>
